Optimize and rearrange code